force-app/main/default/objects/SaleReport__c/SaleReport__c.object-meta.xml
<CustomObject>
    <description>Report of the amount of ore sold after a day of mining.</description>
    <label>Sale Report</label>
    <nameField>
        <label>Event of Sale</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sale Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>