force-app/main/default/objects/SaleReport__c/fields/AuthorizationDate__c.field-meta.xml
<CustomField>
    <fullName>AuthorizationDate__c</fullName>
    <label>Authorization Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>