force-app/main/default/objects/SaleReport__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Purchase Reports</relationshipLabel>
    <relationshipName>Purchase_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>