force-app/main/default/objects/SaleReport__c/fields/GrossSale__c.field-meta.xml
<CustomField>
    <fullName>GrossSale__c</fullName>
    <description>Just the plain worth of ore that was sold, no tax or fees included.</description>
    <label>Gross Sale</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>