force-app/main/default/objects/SaleReport__c/fields/Seller__c.field-meta.xml
<CustomField>
    <fullName>Seller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seller</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sale Reports</relationshipLabel>
    <relationshipName>Sale_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>